2020-02-18  Joseph Myers  <joseph@codesourcery.com>

	* src/arch-aarch64.c (aarch64_undo_prelink_rela): Only write 0 for
	R_AARCH64_TLS_TPREL for ET_EXEC.

2020-02-13  Joseph Myers  <joseph@codesourcery.com>

	* src/arch-aarch64.c (aarch64_prelink_rela): Do not condition
	R_AARCH64_TLS_DTPREL handling on dso->ehdr.e_type == ET_EXEC &&
	info->resolvetls.
	(aarch64_prelink_conflict_rela): Use addend in
	R_AARCH64_TLS_DTPREL handling.

2020-02-12  Joseph Myers  <joseph@codesourcery.com>

	* src/arch-aarch64.c (aarch64_undo_prelink_rela): Do not write 0
	for R_AARCH64_RELATIVE.

2018-10-12   Kyl Russel <bkylerussel@gmail.com
	* doit.c, main.c prelink.h: Add -e option to return an error if
	not everything can be prelinked.

2018-10-12   Mark Hatle <mark.hatle@windriver.com>
	* testsuite/order.sh: Explain failure in log

2018-10-12   Mark Hatle <mark.hatle@windriver.com>
	* testsuite/reloc12.sh: Detect if compiler/linker support test

2018-10-12   Robert Yang <liezhi.yang@windriver.com>
	* src/arch-mips.c: Make tls offset optional on tls usage

2018-10-12   Sergei Trofimovich <slyfox@gentoo.org>
	* src/arch-x86_64.c, src/dso.c, src/prelink.h: Allow prelink of
	pie executables with COPY relocs

2018-10-12   Sergei Trofimovich <slyfox@gentoo.org>
	* tessuite/functions.sh: Avoid timestamp drift

2018-10-12   Joseph Myers <joseph@codesourcery.com>
	* testsuite/unprel1.sh: Fix for cross testing

2018-10-12   Kyle Russell <bkylerussell@gmail.com>
	* src/conflict.c, src/undo.c: Add knowledge of .data.rel.ro for
	read-only dynamic symbols

2018-10-12   Kyle Russell <bkylerussell@gmail.com>
	* src/rtld/dl-lookupX.h: Fix rtld segfault when _dl_lookup_symbol_x
	is NULL on protected symbol relocations
	* testsuite/Makefile.am, testsuite/reloc12.c, testsuite/reloc12.h,
	testsuite/reloc12.sh, testsuite/reloc12lib1.c, testsuite/reloc12lib2.c:
	Add a new test for these relocations

2018-10-12   Mark Hatle <mark.hatle@windriver.com>