@@ -1,3 +1,10 @@
+2020-02-19  Joseph Myers  <joseph@codesourcery.com>
+
+	* src/arch-aarch64.c (aarch64_apply_conflict_rela)
+	(aarch64_prelink_conflict_rela, aarch64_undo_prelink_rela): Handle
+	IFUNCs.
+	* testsuite/ifunc.h [__aarch64__] (IFUNC_ASM): Define.
+
 2020-02-18  Joseph Myers  <joseph@codesourcery.com>
 
 	* src/arch-aarch64.c (aarch64_undo_prelink_rela): Only write 0 for
